--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>5.5.2</version>
         </dependency>
         <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>BankService</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
